Begin to work on listing creation
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1298 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.activerecord.yml
+++ b/config/locales/fr-FR.activerecord.yml
@@ -30,8 +30,45 @@ fr-FR:
     models:
       account: 'Compte'
       account_balance: 'Balance de compte'
-      address_: 'Élément de noeud d''extraction'
-      entity: 'Fiche'
+      area: 'Zone postale'
+      bank_account: 'Compte bancaire'
+      bank_account_statement: 'Relevé de compte bancaire'
+      company: 'Société'
+      complement: 'Champ complémentaire'
+      complement_choice: 'Choix de champ complémentaire'
+      complement_datum: 'Donnée complémentaire de fiche'
+      contact: 'Contact'
+      currency: 'Devise'
+      delay: 'Délai'
+      delivery: 'Livraison'
+      delivery_line: 'Ligne de livraison'
+      delivery_mode: 'Mode de livraison'
+      department: 'Service'
+      district: 'Zone administrative'
+      document: 'Document'
+      document_template: 'Modèle de document'
+      embankment: 'Encaissement'
+      employee: 'Employé'
+      entity: 'Relation'
+      entity_category: 'Catégorie de relation'
+      entity_link: 'Lien de relation'
+      entity_link_nature: 'Nature du lien de la relation'
+      entity_nature: 'Type de relation'
+      entry: 'Écriture'
+      establishment: 'Établissement'
+      event: 'Évènement'
+      event_nature: 'Type d''évènement'
+      financialyear: 'Exercice'
+      inventory: 'Inventaire'
+      inventory_line: 'Ligne d''inventaire'
+      invoice: 'Facture'
+      invoice_line: 'Ligne de facture'
+      journal: 'Journal'
+      journal_record: 'Pièce comptable'
+      language: 'Langue'
+      listing: 'Extraction'
+      listing_node: 'Noeud d''extraction'
+      listing_node_item: 'Élément de noeud d''extraction'
       mandate: 'Responsabilité'
       observation: 'Observation'
       parameter: 'Paramètre'
