--- a/config/locales/fr-FR.pack.company.yml
+++ b/config/locales/fr-FR.pack.company.yml
@@ -141,6 +141,8 @@ fr-FR:
       listing_nodes: 
         title: 'Choisissez les informations à extraire'
       listing_update:
+        data_to_extract: 'Données à extraire'
+        subtitle: 'Vous pouvez modifier les informations générales de l''extraction'
         title: 'Modification de l''extraction {{value}}'
       listings:
         listing_create: 'Créer une nouvelle extraction'
