modification of help files in the module accountancy
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1319 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.pack.accountancy.yml
+++ b/config/locales/fr-FR.pack.accountancy.yml
@@ -285,7 +285,8 @@ fr-FR:
         account_provision: 'Provisions pour risques et charges'
         account_tangible_fixed_assets: 'Immobilisations corporelles'
         account_untangible_fixed_assets: 'Immobilisations incorporelles'
-        account_value: 'BRUT'
+        account_value_current: 'BRUT'
+        account_value_previous: 'BRUT N-1'
         active_balance_sheet: 'Bilan actif'
         active_current_sum: 'Total actifs circulants'
         active_fixed_sum: 'Total actifs immobilisés'
