--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -283,6 +283,7 @@ fr-FR:
       supplier: 'Fournisseur'
       error_missing_title: 'doit contenir la dénomination sociale "{{title}}"'
       error_client_account_already_used: 'Le compte comptable client est déjà utilisé.'
+      error_nature_do_not_allow_a_first_name: 'Le type "{{nature}}" sélectionné ne permet de renseigné un prénom'
       error_supplier_account_already_used: 'Le compte comptable fournisseur est déjà utilisé.'
     entry:
       error_amount_balance1: 'L''écriture doit être renseignée soit au débit, soit au crédit.' 
