--- a/config/locales/fr-FR.pack.company.yml
+++ b/config/locales/fr-FR.pack.company.yml
@@ -146,6 +146,8 @@ fr-FR:
         title: 'Choisissez les informations à extraire'
       listing_update:
         data_to_extract: 'Données à extraire'
+        listing_extract: 'Éxécuter l''extraction'
+        query: 'Requête: '
         subtitle: 'Vous pouvez modifier les informations générales de l''extraction'
         title: 'Modification de l''extraction {{value}}'
       listings:
