--- a/config/locales/fr-FR/help/relations-mandates_configure.txt
+++ b/config/locales/fr-FR/help/relations-mandates_configure.txt
@@ -1,7 +1,7 @@
 h1. Configuration des responsabilités 
 
-Le tableau est constitué de 2 lignes : l'une correspondant aux filtres de recherche et l'autre aux nouvelles valeurs.
-Dans la première ligne, choisissez le champ sur lequel vous souhaitez effectuer votre recherche et le filtre à utiliser.
-Dans la deuxième ligne, insérer la nouvelle valeur du ou des champs pour les enregistrements issus de la recherche. 
+Le tableau est constitué de 2 colonnes : l'une correspondant aux filtres de recherche et l'autre aux nouvelles valeurs.
+Dans la première colonne, vous pouvez choisir le champ sur lequel vous souhaitez effectuer votre recherche, le filtre à utiliser et le motif recherché.
+Dans la deuxième colonne, vous pouvez insérer la nouvelle valeur du ou des champs pour les enregistrements issus de la recherche. 
 
 NB: Pour que l'opération soit effective, n'oubliez pas de *cocher la case en rapport avec le champ* dans lequel il faut insérer la nouvelle valeur.
