fixes bugs on accountancy, income statement model updates
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1338 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.pack.accountancy.yml
+++ b/config/locales/fr-FR.pack.accountancy.yml
@@ -178,6 +178,9 @@ fr-FR:
         record_printed: 'Datée du'
       entry_update:
         title: 'Modification de l''écriture'
+      financialyear:
+        general_informations: 'Informations générales'
+        title: 'Exercice comptable {{code}}'
       financialyear_close:
         close: 'Clôturer l''exercice'
         save_renew: 'Souhaitez-vous reporter les à nouveaux ? '
