Fixes some trouble in unit management
git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1345 67a09383-3dfa-4221-8551-890bac9c277c

--- a/config/locales/fr-FR.activerecord.yml
+++ b/config/locales/fr-FR.activerecord.yml
@@ -1667,11 +1667,12 @@ fr-FR:
 
       # Unité
       unit:
+        base: Base
+        coefficient: Coefficient
+        start: 'Valeur à l''origine'
         company_id: 'Société'
         created_at: 'Créé le'
         creator_id: 'Créateur'
-        expression: Expression
-        normalized_expression: Expression normalisée
         id: 'ID'
         label: Libellé
         lock_version: 'Version'
