--- a/config/locales/fr-FR.pack.management.yml
+++ b/config/locales/fr-FR.pack.management.yml
@@ -495,6 +495,12 @@ fr-FR:
         letter: 'Lettre'
       sale_order_line_create:
         title: 'Ajout d''une ligne de produit'
+      sale_order_line_informations: 
+        contact: 'à l''adresse'
+        from_date: 'Du '
+        to_date: 'Au '
+      _sale_order_line_informations:
+        tracking: 'Lot '
       _sale_order_line_form:
         free_price: 'Renseignez ces champs si vous souhaitez appliquer un autre prix'
         infos: 'Choississez le produit et la quantité'
