--- a/config/locales/fr-FR/help/production-shape_operation_nature_update.txt
+++ b/config/locales/fr-FR/help/production-shape_operation_nature_update.txt
@@ -1,4 +1,4 @@
-h1. Comment modifier un type de traitement ?
+h1. Comment modifier un type de travail ?
 
 Il vous suffit de lui attribuer un nom et éventuellement une description.
 
