--- a/config/locales/fr-FR/help/production-shape_operation_natures.txt
+++ b/config/locales/fr-FR/help/production-shape_operation_natures.txt
@@ -1,5 +1,5 @@
-h1. Les types de traitements
+h1. Les types de travaux
 
-Les types de traitements permettent de *rassembler les traitements en catégories*.
+Les types de travaux permettent de *rassembler les travaux en catégories*.
 
 <<production-index|Retour à l'aide sur la Gestion de la production>>
