--- a/config/locales/fr-FR.yml
+++ b/config/locales/fr-FR.yml
@@ -451,6 +451,7 @@ fr-FR:
         transfer: 'Virement' 
         none: 'Aucun'
     sale_order_line:
+      can_not_use_this_tracking: 'Vous ne  pouvez pas utiliser le lot {{name}}, la quantité commandée est supérieure à la quantité disponible '
       currency_is_not_sale_order_currency: 'Le prix du produit ne correspond pas à la monnaie définie pour la vente'
       error_no_found_price: 'Aucun prix n'' a pu être trouvé pour ce produit et cette liste de tarif'
       reduction_on: 'Remise de {{percent}}% sur : {{product}}'
